fix: fixed contact link at discord

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="line-quickInfo"></div>
           <ul>
             <li class="contacts-list discord-logo">
-              <a class="a-contacts" href="BonelyLush#0480">BonelyLush#0480</a>
+              BonelyLush#0480
             </li>
             <li class="contacts-list gmail-logo">
               <a class="a-contacts" href="mailto:lonely.bush68@gmail.com"
